--- a/show.html
+++ b/show.html
@@ -97,7 +97,7 @@
 
 <body>
 <div class="cs">
-    <img src="images/lover.jpg" id="logo">
+    <img src="" id="logo">
 </div>
 <canvas class="canvas" width="1820" height="905"></canvas>
 <p class="text" style="color: #ed3073;">
