--- a/show.html
+++ b/show.html
@@ -132,7 +132,7 @@
             S.Drawing.init('.canvas');
             document.body.classList.add('body--ready');
             //想说的话
-            S.UI.simulate("白灵燕|I'm|张博锋|Nice|to|Meet|You|#countdown 3|#time");
+            S.UI.simulate("阿星妈妈|I'm|小狗|祝|您|生|日|快|乐|#countdown 3|#time");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
