--- a/result.html
+++ b/result.html
@@ -10451,7 +10451,7 @@
 																	data-click="{'rsv_re_ename':'尴尬','rsv_re_uri':'ef5f4dd9033f484e8b74f3bbdd997e8e'}">
 																	<div class="opr-recommends-merge-p" id="lover">
 																		<a target="_self" href="javascript:;"><img
-																				src="images/right.png"
+																				src="images/ax.png"
 																				data-b64-id="1356031244_4184783259_58"
 																				class="c-img c-img4 opr-recommends-merge-img"></a>
 																		<a class="opr-recommends-merge-mask"
@@ -10614,7 +10614,7 @@
 					<div class="c-row c-gap-top-small">
 						<div class="general_image_pic c-span6"><a class="c-img6" style="height:75px" href="javascript:;"
 																  target="_self"><img class="c-img c-img6"
-																					  src="images/left1.png"
+																					  src="images/ax.png"
 																					  style="height:75px;"></a></div>
 						<div class="c-span18 c-span-last">
 							<div class="c-abstract">世界残酷而美丽， 我们每一个人，自出生的那一刻起，便是自由的。无论世界多么可怕，都没有关系。只要有你在， 我便有前进的动力，无所不能！</div>
@@ -10682,7 +10682,7 @@
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:115px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
-                                                                                      src="images/left2.jpg"
+                                                                                      src="images/ax.jpg"
                                                                                       style="height:115px;"></a></div>
                         <div class="c-span18 c-span-last">
                             <div class="c-abstract">不要忧愁老之将至，你老了一定很可爱。而且，假如你老了十岁，我当然也同样老了十岁，世界也老了十岁，上帝也老了十岁，一切都还是一样。我只愿意凭着一点灵感的相通，时时带给彼此以慰藉，像流星的光辉，照耀我疲惫的梦寐，永远存一个安慰，纵然在离别的时候，醒来觉得甚是爱你.</div>
@@ -10719,7 +10719,7 @@
                             <div class="op-bk-polysemy-imgWrap OP_LOG_BTN"
                                  data-url="http://www.baidu.com/link?url=2UyZke3nX7z-repkdOautH7KLfKj9p1yZ5vhXZS6MPUgjxLhX8hTtLWxAiP9cntEXLv-w2NY7TKgyxtv37yF_1wt1DVZFW4RfVGNdfSzLogHmg-zxaaPkfqcfcGrQrrY">
                                 <div class="c-img c-img6"
-                                     style="height: 91px; background: url(images/left3.jpg) no-repeat center center; background-size: cover;">
+                                     style="height: 91px; background: url(images/ax.jpg) no-repeat center center; background-size: cover;">
                                 </div>
                                 <i class="op-bk-polysemy-icon" style="top:25.5px"></i>
                                 <div class="op-bk-polysemy-logo"></div>
@@ -10812,7 +10812,7 @@
                             <td class="op-tieba-general-firsttd" colspan="3">
                                 <div class="op-tieba-general-mainpic"><a class="op-tieba-general-photo-link"
                                                                          href="javascript:;" target="_self"><img
-                                        class="c-img4" src="./images/left4.png"></a>
+                                        class="c-img4" src="./images/ax.png"></a>
                                 </div>
                                 <div class="op-tieba-general-main-col op-tieba-general-main-con">
 									<br>
