--- a/result.html
+++ b/result.html
@@ -10682,7 +10682,7 @@
                     <div class="c-row c-gap-top-small">
                         <div class="general_image_pic c-span6"><a class="c-img6" style="height:115px" href="javascript:;"
                                                                   target="_self"><img class="c-img c-img6"
-                                                                                      src="images/ax.jpg"
+                                                                                      src="images/mmexport1750348088606.jpg"
                                                                                       style="height:115px;"></a></div>
                         <div class="c-span18 c-span-last">
                             <div class="c-abstract">不要忧愁老之将至，你老了一定很可爱。而且，假如你老了十岁，我当然也同样老了十岁，世界也老了十岁，上帝也老了十岁，一切都还是一样。我只愿意凭着一点灵感的相通，时时带给彼此以慰藉，像流星的光辉，照耀我疲惫的梦寐，永远存一个安慰，纵然在离别的时候，醒来觉得甚是爱你.</div>
@@ -10719,7 +10719,7 @@
                             <div class="op-bk-polysemy-imgWrap OP_LOG_BTN"
                                  data-url="http://www.baidu.com/link?url=2UyZke3nX7z-repkdOautH7KLfKj9p1yZ5vhXZS6MPUgjxLhX8hTtLWxAiP9cntEXLv-w2NY7TKgyxtv37yF_1wt1DVZFW4RfVGNdfSzLogHmg-zxaaPkfqcfcGrQrrY">
                                 <div class="c-img c-img6"
-                                     style="height: 91px; background: url(images/ax.jpg) no-repeat center center; background-size: cover;">
+                                     style="height: 91px; background: url(images/mmexport1750348088606.jpg) no-repeat center center; background-size: cover;">
                                 </div>
                                 <i class="op-bk-polysemy-icon" style="top:25.5px"></i>
                                 <div class="op-bk-polysemy-logo"></div>
