--- a/result.html
+++ b/result.html
@@ -9720,7 +9720,7 @@
 									type="hidden" name="ch" value=""><input type="hidden" name="tn"
 									value="SE_PclogoS_8whnvm25"><input type="hidden" name="bar" value=""><span
 									class="bg s_ipt_wr"><input id="kw" name="wd" class="s_ipt" maxlength="255"
-										autocomplete="off" value="白灵燕"></span><span class="bg s_btn_wr"><input
+										autocomplete="off" value="阿星"></span><span class="bg s_btn_wr"><input
 										type="submit" id="su" value="百度一下" class="bg s_btn"></span><span
 									class="tools"><span id="mHolder">
 										<div id="mCon"><span>输入法</span></div>
