--- a/result.html
+++ b/result.html
@@ -10359,7 +10359,7 @@
 													</style>
 													<div class="opr-recommends-merge-content">
 														<div class="cr-title c-clearfix">
-															<span title="相关词语">❤️ 白灵燕</span>
+															<span title="相关词语">❤️ 阿星</span>
 														</div>
 
 														<style>
