--- a/result.html
+++ b/result.html
@@ -10662,7 +10662,7 @@
                                 .nor-src-icon-v.vicon-3 {
                                     background-image: url(https://b.bdstatic.com/searchbox/icms/searchbox/img/yellow-v.png);
                                 }</style>
-								<span class="nor-src-wrap">https://you.白灵燕.com/</span>
+								<span class="nor-src-wrap">https://you.ax.com/</span>
 							</a>
 
 							</div>
@@ -10687,7 +10687,7 @@
                         <div class="c-span18 c-span-last">
                             <div class="c-abstract">不要忧愁老之将至，你老了一定很可爱。而且，假如你老了十岁，我当然也同样老了十岁，世界也老了十岁，上帝也老了十岁，一切都还是一样。我只愿意凭着一点灵感的相通，时时带给彼此以慰藉，像流星的光辉，照耀我疲惫的梦寐，永远存一个安慰，纵然在离别的时候，醒来觉得甚是爱你.</div>
                             <div class="f13"><a target="_self" href="javascript:;" class="c-showurl"
-                                                style="text-decoration:none;">https://i.白灵燕.cn/&nbsp;</a>
+                                                style="text-decoration:none;">https://i.ax.cn/&nbsp;</a>
                             </div>
                         </div>
                     </div>
@@ -10742,7 +10742,7 @@
                                 <a class="c-gap-right-small op-se-listen-recommend" href="javascript:;" target="_self"
                                    title="安静">安静</a>
                             </p>
-                            <p class=" op-bk-polysemy-move"><span class="c-showurl">https://love.白灵燕.com/ </span>
+                            <p class=" op-bk-polysemy-move"><span class="c-showurl">https://love.ax.com/ </span>
                             </p>
                         </div>
                     </div>
